--- a/R/README.Rmd
+++ b/R/README.Rmd
@@ -7,6 +7,8 @@ output:
     toc: yes
   pdf_document:
     toc: yes
+  word_document:
+    toc: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -54,15 +56,16 @@ salmondata <- readRDS("data/GSE131972.salmonv2.SE.rds")
 # Re-analysis of published results
 ## Assessment of Marrocco et al. 2017
 
-Concerning the 2017 publication the authors claim that numerous genes are differentially regulated between males and females after acute stress. Unfortunately, they do not include a list with all genes in the publication, but Table 1 contains a subsets of genes that are allegedly differentially regulated between males and females upon acute stress
+In the 2017 publication the authors claim that numerous genes are differentially regulated between males and females after acute stress. Unfortunately, they do not include a list with all genes in the publication, but Table 1 contains a subsets of genes that are allegedly differentially regulated between males and females upon acute stress
 
-Let's inspect these genes across the runs used for the original publication in WildType animals
+First, we inspect these genes across the runs used in the original publication in WildType animals
 
 ```{r}
 se <- kallistodata
 se <- subset(se,select  = se$Set == "GSE100579" & se$Genotype == "WildType")
 genes <- read.table("metadata/Marrocco2017SexStressGenes.csv", sep = ";", header = T)$genes
-sehm(se,genes,do.scale = T,anno_columns = c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T)
+se <- se[,order(se$Sex,se$FST)]
+sehm(se,genes,do.scale = T,anno_columns = c("FST","Sex"), cluster_rows = T, main = "Genes with male-female acute stress differences")
 ```
 
 It looks as if there could be something to this, however unfortunately this finding is higly underpowered having only 6 replicates for a 4 group comparison
@@ -72,15 +75,17 @@ Let's inspect these genes across all sequencing runs and find out wheather the f
 ```{r}
 se <- kallistodata
 se <- subset(se,select  = se$ELS == "None" & se$Genotype == "WildType")
-sehm(se,genes,do.scale = T,anno_columns = c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T)
+se <- se[,order(se$Set,se$Sex,se$FST)]
+sehm(se,genes,do.scale = T,anno_columns = c("FST","Sex","Set"), gaps_at = "Set", cluster_rows = T, main =  "Same genes in the second data-set")
 ```
 
-it becomes apparent that these genes seem to be co-expressed and highly variable across all samples. the finding that in females and males these genes react differently to stress seems inaccurate. It highlights the danger of applying single run sequencing.
+It becomes apparent that these genes seem to be co-expressed and highly variable across all samples. the finding that in females and males these genes react differently to stress seems inaccurate, with replicates from the second set demonstrating strong intra-group differences.
 
 If we further visualize these genes across all samples, we find
 ```{r}
 se <- kallistodata
-sehm(se,genes,do.scale = T,anno_columns = c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T)
+se <- se[,order(se$Sex,se$FST)]
+sehm(se,genes,do.scale = T,anno_columns = c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T, gaps_at = "Set",   main =  "Same genes across all samples")
 ```
 
 The selected genes display a high co-expression and could possibly be highly variable due to technical reasons. Let's try to remove technical variability from our runs using SVA and re-visualize the same genes
@@ -115,73 +120,86 @@ dosvacor <- function(SE, form=NULL, form0=~1, ...){
 }
 
 se <- dosvacor(se, form = ~ Set + Sex * FST, form0 = ~Set)
-sehm(se,genes,do.scale = T,anno_columns = c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T,assayName = "corrected")
+sehm(se,genes,do.scale = T,anno_columns =  c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T,assayName = "corrected",  main =  "Same genes after correcting for technical variability")
 ```
 
-As we can see, removing technical variability abolishes the effects for the male-female stress effects seen in the single replicate comparisons. It becomes apparent, that these genes do not have any sex specific acute stress response across all samples
+As we can see, removing technical variability abolishes the effects for the male-female stress difference seen in the single replicate comparisons. It becomes apparent, that these genes do not have any sex specific acute stress response across all samples
 
 ## Assessment of Gray et al. 2018
 
 A complete assessment of the findings of Gray et al. 2018 is unfortunately not possible. the repository GSE100579 is missing crucial samples for the chronic stress model for the BDNF Val66Met genotype and only includes samples of acute stress.
 
-However, the authors claim that many genes are differentially regulated between WildType and BDNF Val66Met animals at baseline. While no complete list of genes has been included in the publication, a subset can be found in Table 1
+However, the authors claim that many genes are differentially regulated between WildType and BDNF Val66Met animals at baseline. While no complete list of genes has been included in the publication, a subset can be found in Table 1.
 
+We plot these genes in the GSE100579 data set.
 ```{r}
 se <- kallistodata
 genes <- read.table("metadata/Gray2018GenotypeGenes.csv", sep = ";", header = T)$genes
 se <- subset(se,select  = se$Set == "GSE100579" & se$FST == "None")
-sehm(se,genes,do.scale = T,anno_columns = c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T)
+se <- se[,order(se$Sex,se$Genotype)]
+sehm(se,genes,do.scale = T,anno_columns = c("Genotype","Sex"), cluster_rows = T, main = "Genes differentially effected by BDNF Val66Met in males and females")
 ```
 
-Let's investigate these genes across all samples
+Again, we find that the experimental design was severly underpowered.
+We investigate the expression of these genes across all samples from both datasets.
 ```{r}
 se <- kallistodata
-sehm(se,genes,do.scale = T,anno_columns = c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T)
+se <- se[,order(se$Sex,se$Genotype)]
+sehm(se,genes,do.scale = T,anno_columns = c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T, gaps_at = "Set", main = "Same genes across all samples")
 ```
 
-We see a similar pattern as in Marrocco et al 2017. The baseline difference does not reproduce in GSE 131972 which only includes WildType mice.
+We see a similar pattern as in Marrocco et al 2017. The baseline difference does not reproduce in GSE 131972 which only includes male WildType mice and shows high inter-group variability for these genes.
 
 Let's again try to eliminate technical variabilty and re-visualize the same genes
 
 ```{r}
 se <- dosvacor(se, form = ~Set + Sex + Genotype + FST + ELS, form0 = ~Set)
-sehm(se,genes,do.scale = T,anno_columns = c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T,assayName = "corrected")
+sehm(se,genes,do.scale = T,anno_columns = c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T,assayName = "corrected", main = "Same genes after removing technical variabilty")
 ```
 
 It becomes apparent, that these genes do not have any genotype specific baseline difference across all samples
 
 ## Assessment of Marrocco et al. 2019
-Here we re-analyse Marrocco et al. 2019 checking for ELS dependent changes in the acute stress response. The same analysis will be performed twice, once using gene counts from a transcriptome alignment, and once using gene counts from a genome alignment. Both analyses had similar results
+Here we re-analyse Marrocco et al. 2019 checking for ELS dependent changes in the acute stress response. The same analysis will be performed three times, once using gene counts from a transcriptome alignment (kallisto) with edgeR, once using gene counts from a genome alignment with edgeR and once using gene counts from a transcriptome alignment (kallisto) with DESeq. All analyses had similar results, whereas DESeq produced most significant hits. However, the core message of the publication that ELS substantially impacts the transcriptional acute stress response could not be reproduced with any method.
 
-### Using kallisto data
+### Visualization of genes mentioned in the publication 
+
 ```{r}
 se <- kallistodata
+se <- se[order(rownames(se)),]
 se <- subset(se,select  = se$Set == "GSE131972")
+se2 <- salmondata
+se2 <- se2[order(rownames(se2)),]
 ```
 
 In their publications the authors unfortunately do not upload a list with differentially expressed genes. However, in their discussion they mention a number of genes that they claim are differentially expressed between ELS and non-ELS mice after acute stress.
 They claim that acute stress reduces the expression of Grin1, Grin2a, Gabbr2, and Gabra1 in CA3 neurons of non-ELS mice, but not ELS mice:
 ```{r}
-sehm(se,c("Grin1","Grin2a","Gabbr2","Gabra1"),do.scale = T,anno_columns = c("ELS","FST"), cluster_rows = T)
+sehm(se,c("Grin1","Grin2a","Gabbr2","Gabra1"),do.scale = T ,anno_columns = c("ELS","FST"),  main = "Selected genes with transcriptome alignment")
+sehm(se2,c("Grin1","Grin2a","Gabbr2","Gabra1"),do.scale = T,anno_columns = c("ELS","FST"), , assayName = "TPM",  main = "Selected genes with genome alignment")
 ```
 
-it becomes apparent, that this finding does not look significant
+it becomes apparent, that this finding does not look robust
 
 Further, they claim that there is restricted list of genes selectively induced by AS in ELS mice (Per1, Npy, Nfkbia, Penk,Dusp1, Cst3, Trib1, Htra1, Sdc4, Plekhf1) but not non-ELS mice.
 ```{r}
-sehm(se,c("Per1", "Npy", "Nfkbia", "Penk","Dusp1", "Cst3", "Trib1", "Htra1", "Sdc4", "Plekhf1"),do.scale = T,anno_columns = c("ELS","FST"), cluster_rows = T)
+sehm(se,c("Per1", "Npy", "Nfkbia", "Penk","Dusp1", "Cst3", "Trib1", "Htra1", "Sdc4", "Plekhf1"),do.scale = T,anno_columns = c("ELS","FST"),  main = "Selected genes with transcriptome alignment")
+sehm(se2,c("Per1", "Npy", "Nfkbia", "Penk","Dusp1", "Cst3", "Trib1", "Htra1", "Sdc4", "Plekhf1"),do.scale = T,anno_columns = c("ELS","FST"), assayName = "TPM",  main = "Selected genes with genome alignment")
 ```
 
-it becomes apparent, that this finding also does not look sigificant. while these genes might be increased in expression in ELS mice it is hard to see this being a significant finding, especially, since the same effect can be observed for one replicate in the non-ELS group.
+it becomes apparent, that this finding also does not look robust while these genes might be increased in expression in ELS mice it is hard to see this being a significant finding, especially, since the same effect can be observed for one replicate in the non-ELS group.
 
 The authors claim that there are a number of genes that appear to be induced by AS in both ELS and non ELS mice. these include (Egr1/2/4, Arc, Fos, and Fosb)
 ```{r}
-sehm(se,c("Egr1", "Egr2", "Egr4", "Arc","Fos", "Fosb"),do.scale = T,anno_columns = c("ELS","FST"), cluster_rows = T)
+sehm(se,c("Egr1", "Egr2", "Egr4", "Arc","Fos", "Fosb"),do.scale = T,anno_columns = c("ELS","FST"), main = "Selected genes using transcriptome alignment")
+sehm(se2,c("Egr1", "Egr2", "Egr4", "Arc","Fos", "Fosb"),do.scale = T,anno_columns = c("ELS","FST"), assayName = "TPM", main = "Selected genes using genome alignment")
 ```
 
-For these genes it looks as if their finding might be significant.
+For these genes it looks as if the finding might be significant.
 
-Let's investigate the whole data with a statistical approach using egeR and a GLM type of analysis for swim effects, early life effects and interactions
+### Analysis using kallisto data and edgeR
+
+Let's investigate the transcriptome alligned reads with a statistical approach using egeR and a GLM type of analysis for swim effects, early life effects and interactions
 ```{r}
 #experimental design, interactive model
 design <- model.matrix(~se$FST * se$ELS)
@@ -191,7 +209,7 @@ y <- calcNormFactors(y)
 y <- estimateDisp(y,design)
 
 #filter out genes that are below 10 counts in more than 75% of samples
-keep <- rowSums(y$counts>10) >= 3
+keep <- rowSums(y$counts>10) >= (ncol(y) * 0.25)
 y <- y[keep, , keep.lib.sizes=FALSE]
 
 Results <- list()
@@ -206,53 +224,25 @@ Les's investigate if there are any genes altered by acute stress
 topTags(Results$`se$FSTFST`)
 ```
 
-Even though the data looked promising unfortunately nothing survives mutliple testing correction. This indicates that this study might be severly underpowered, so in order to resolve FST specific effects more replicats would be needed
-
+Even though the data looked promising no genes pass mutliple testing correction. This indicates that this study might be severly underpowered, so in order to resolve FST specific effects more replicats would be needed
 
 Are there any genes altered by early life stress?
 ```{r}
 topTags(Results$`se$ELSELS`)
 ```
 
-Unfortunately, there are no genes that pass the multiple testing correction
+There are no genes that pass the multiple testing correction.
 
 Let's investigate if there are genes with a significant interaction
 ```{r}
 topTags(Results$`se$FSTFST:se$ELSELS`)
 ```
 
-Unfortunately, no genes have a altered acute stress response in ELS vs normal animals
+No genes have a altered acute stress response in ELS vs normal animals. This clearly fails to reproduce the findings of the original study, which claimed hundereds of genes being altered in their FST respons following ELS
 
-### Using salmon data
+### Using salmon data and edgeR
 
-To demonstrate that alignment to the genome results in similar results in this section we repeat the same analysis with the salmon data
-```{r}
-se <- salmondata
-```
-
-In their Publications the authors unfortunately do not upload a list with differentially expressed genes. However, in their discussion they mention a number of genes that they claim are differentially expressed between ELS and non-ELS mice after acute stress.
-They claim that acute stress reduces the expression of Grin1, Grin2a, Gabbr2, and Gabra1 in CA3 neurons of non-ELS mice, but not ELS mice:
-```{r}
-sehm(se,c("Grin1","Grin2a","Gabbr2","Gabra1"),do.scale = T,anno_columns = c("ELS","FST"), cluster_rows = T)
-```
-
-it becomes apparent, that this finding does not look significant
-
-Further, they claim that there is restricted list of genes selectively induced by AS in ELS mice (Per1, Npy, Nfkbia, Penk,Dusp1, Cst3, Trib1, Htra1, Sdc4, Plekhf1) but not non-ELS mice.
-```{r}
-sehm(se,c("Per1", "Npy", "Nfkbia", "Penk","Dusp1", "Cst3", "Trib1", "Htra1", "Sdc4", "Plekhf1"),do.scale = T,anno_columns = c("ELS","FST"), cluster_rows = T)
-```
-
-it becomes apparent, that this finding also does not look significant. while these genes might be increased in expression in ELS mice it is hard to see this being a significant finding, especially, since the same effect can be observed for one replicate in the non-ELS group.
-
-The authors claim that there are a number of genes that appear to be induced by AS in both ELS and non ELS mice. these include (Egr1/2/4, Arc, Fos, and Fosb)
-```{r}
-sehm(se,c("Egr1", "Egr2", "Egr4", "Arc","Fos", "Fosb"),do.scale = T,anno_columns = c("ELS","FST"), cluster_rows = T)
-```
-
-For these genes it looks as if their finding might be significant.
-
-Let's investigate the whole data with a statistical approach using egeR and a GLM type of analysis for swim effects, early life effects and interactions
+Let's investigate the genome alligned counts with a statistical approach using egeR and a GLM type of analysis for swim effects, early life effects and interactions
 ```{r}
 #experimental design, interactive model
 design <- model.matrix(~se$FST * se$ELS)
@@ -262,7 +252,7 @@ y <- calcNormFactors(y)
 y <- estimateDisp(y,design)
 
 #filter out genes that are below 10 counts in more than 75% of samples
-keep <- rowSums(y$counts>10) >= 3
+keep <- rowSums(y$counts>10) >= (ncol(y) * 0.25)
 y <- y[keep, , keep.lib.sizes=FALSE]
 
 Results <- list()
@@ -277,39 +267,107 @@ Les's investigate if there are any genes altered by acute stress
 topTags(Results$`se$FSTFST`)
 ```
 
-Even though the data looked promising unfortunately nothing survives mutliple testing correction. This indicates that this study might be severly underpowered, so in order to resolve FST specific effects more replicats would be needed.
-
+No genes pass mutliple testing correction
 
 Are there any genes altered by early life stress?
 ```{r}
 topTags(Results$`se$ELSELS`)
 ```
 
-Unfortunately, there are no genes that pass the multiple testing correction
+There are no genes that pass the multiple testing correction
 
 Let's investigate if there are genes with a significant interaction
 ```{r}
 topTags(Results$`se$FSTFST:se$ELSELS`)
 ```
 
-Unfortunately, no genes have a altered acute stress response in ELS vs normal animals
+There are no genes have an altered acute stress response in ELS vs normal animals
+
+### Using DESeq instead of EdgeR for statistical analysis
+
+The authors of the orignial publication used DESeq for the statistical assessment. For completeness, we repeat the same analysis using this method on the transcriptome alligned data
+
+```{r}
+suppressPackageStartupMessages({
+  library(DESeq2)
+  library(sva)
+  library(SEtools)
+  library(RUVSeq)
+})
+```
+
+
+```{r}
+dat1 <- kallistodata
+dat1 <- dat1[,dat1$Set=="GSE131972"]
+dds1 <- DESeqDataSetFromMatrix(round(assay(dat1)), colData=colData(dat1),
+        design=~FST+ELS+FST:ELS )
+dds1 <- DESeq(dds1)
+# so that we plot the DESeq-normalized counts:
+dat1 <- dat1[row.names(dds1),]
+assays(dat1)$lognorm <- log1p(counts(dds1, normalized=TRUE))
+rowData(dat1)$logCount <- rowMeans(assays(dat1)$lognorm)
+resultsNames(dds1)
+```
+
+
+```{r}
+res <- results(dds1, name = "FST_FST_vs_None")
+DESeq2::plotMA(res)
+res <- res[order(res$padj),]
+dat1 <- dat1[,order(dat1$ELS, dat1$FST)]
+sehm(dat1, row.names(res)[which(res$padj<0.05)], assayName = "lognorm", do.scale = TRUE, anno_row="logCount", anno_columns=c("ELS","FST"), main="Differentially expressed upon FST")
+```
+
+We find a few genes which are differentially expressed after FST
+
+
+```{r}
+res <- results(dds1, name = "ELS_ELS_vs_None")
+DESeq2::plotMA(res)
+res <- res[order(res$padj),]
+dat1 <- dat1[,order(dat1$ELS, dat1$FST)]
+sehm(dat1, row.names(res)[which(res$padj<0.05)], assayName = "lognorm", do.scale = TRUE, anno_row="logCount", anno_columns=c("ELS","FST"), main="Differentially expressed upon ELS")
+```
+
+We find a few genes which are differentially expressed after ELS
+
+
+```{r}
+res <- results(dds1, name = "FSTFST.ELSELS")
+DESeq2::plotMA(res)
+res <- res[order(res$padj),]
+dat1 <- dat1[,order(dat1$ELS, dat1$FST)]
+res[which(res$padj<0.05),]
+```
+We find a single gene that is differentially expressed after FST in ELS vs non-ELS mice. Still, this clearly fails to reproduce the findings of the original study, which claimed thousands of genes being altered in their FST respons following ELS
 
 # Meta-Analysis of all data
+Since we were unable to reproduce many of the findigs from the original publications we re-assess the combined data from both repositiories to investigate a number of questions:
+
+1. are genes differentially expressed following forces swim stress?
+2. are genes differentially expressed following males and females?
+3. are genes differentially expressed in BDNF Val66Met mice?
+4. are genes differentially expressed following early life stress
+5. are responses of FST genes altered by sex?
+6. are responses of FST genes altered by BDNF Val66Met?
+7. are responses of FST genes altered by early life stress?
 
 ## Additive model
-Let's run an overarching analysis over all data to determine if there are any significant effects for acute stress (=FST), Genotype, GEOdataset or early life stress
+Let's run an overarching analysis over all data to determine if there are any significant effects for forces swim stress (=FST), Sex, Genotype or early life stress (=ELS). In the process we also remove technical variabilty to increase the chance of successfully find candidate genes.
 ```{r}
 se <- kallistodata
+se <- dosvacor(se, form = ~FST + Sex + Genotype + Set + ELS, form0 = ~Set)
 
 #experimental design, full additive model
-design <- model.matrix(~se$FST + se$Sex + se$Genotype + se$Set + se$ELS)
+design <- model.matrix(~ se$SV1 + se$SV2 + se$SV3 + se$FST + se$Sex + se$Genotype + se$Set + se$ELS)
 
 y <- DGEList(counts=assays(se)$counts)
 y <- calcNormFactors(y)
 y <- estimateDisp(y,design)
 
 #filter out genes that are below 10 counts in more than 75% of samples
-keep <- rowSums(y$counts>10) >= 5
+keep <- rowSums(y$counts>10) >= (ncol(y) * 0.25)
 y <- y[keep, , keep.lib.sizes=FALSE]
 
 Results <- list()
@@ -319,56 +377,63 @@ for(i in colnames(design)[-1]){
 }
 ```
 
-Les's investigate if there are any genes altered by acute stress
+### Are genes differentially expressed following forces swim stress?
 ```{r}
-topTags(Results$`se$FSTFST`)
+se <- se[,order(se$FST)]
+sehm(se, rownames(topTags(Results$`se$FSTFST`,p.value = 0.05, n = 1000)), assayName = "corrected", do.scale = TRUE, anno_columns=c("ELS","FST","Genotype","Sex","Set"), main="Significant FST genes with corrected data")
+sehm(se, rownames(topTags(Results$`se$FSTFST`,p.value = 0.05, n = 1000)), do.scale = TRUE, anno_columns=c("ELS","FST","Genotype","Sex","Set"), main="Significant FST genes with uncorrected data")
+topTags(Results$`se$FSTFST`,p.value = 0.05, n = 1000)
 ```
-Indeed, there are multiple candidate genes that are significantly altered by acute stress across other Conditions
 
-Are there any genes altered by sex
+There are multiple candidate genes that are significantly altered by acute stress across other condition
+
+### Are genes differentially expressed between males and females?
 ```{r}
-topTags(Results$`se$Sexfemale`)
+se <- se[,order(se$Sex)]
+sehm(se, rownames(topTags(Results$`se$Sexfemale`,p.value = 0.05, n = 1000)), assayName = "corrected", do.scale = TRUE, anno_columns=c("ELS","FST","Genotype","Sex","Set"), main="Significant sex genes with corrected data")
+sehm(se, rownames(topTags(Results$`se$Sexfemale`,p.value = 0.05, n = 1000)), do.scale = TRUE, anno_columns=c("ELS","FST","Genotype","Sex","Set"), main="Significant Sex genes with uncorrected data")
+topTags(Results$`se$FSTFST`,p.value = 0.05, n = 1000)
 ```
-Indeed, there are multiple candidate genes that are significantly altered by sex across other FSTs
+
+There are multiple candidate genes that are significantly altered by sex across other conditions
 
 
-Are there any genes altered by BDNF Val66Met phenotype?
+### Are genes differentially expressed in BDNF Val66Met mice?
 ```{r}
+se <- se[,order(se$Genotype)]
+sehm(se, rownames(topTags(Results$`se$GenotypeBDNFMET`)), assayName = "corrected", do.scale = TRUE, anno_columns=c("ELS","FST","Genotype","Sex","Set"), main="Top10 Genotype genes (not significant!)")
 topTags(Results$`se$GenotypeBDNFMET`)
 ```
 
-Unfortunately, there are no genes that pass the multiple testing correction
+No genes pass multiple testing correction
 
-Are there any genes altered early life stress?
+### Are genes differentially expressed following early life stress?
 ```{r}
+se <- se[,order(se$ELS)]
+sehm(se, rownames(topTags(Results$`se$ELSELS`)), assayName = "corrected", do.scale = TRUE, anno_columns=c("ELS","FST","Genotype","Sex","Set"), main="Top10 ELS genes (not significant!)")
 topTags(Results$`se$ELSELS`)
 ```
 
-Unfortunately, there are no genes that pass the multiple testing correction
-
-Let's plot the top 10 genes for both sex and acute stress
-```{r}
-genes <- append(rownames(topTags(Results$`se$FSTFST`)),rownames(topTags(Results$`se$Sexfemale`)))
-sehm(se,genes,do.scale = T,anno_columns = c("ELS","FST","Genotype","Sex","Set"), cluster_rows = T,assayName = "logcpm")
-```
+No genes pass multiple testing correction
 
 ## Interactive models
 
 To futher investigate if across all samples there is any variable that interacts with acute stress we will run a series of models that incorporate an interaction term between acute stress and any of the variables
 
-Interaction between acute stress and sex
+### Are responses of FST genes altered by sex?
 ```{r}
 se <- kallistodata
+se <- dosvacor(se, form = ~FST + Sex + Genotype + Set + ELS + FST:Sex, form0 = ~Set)
 
 #experimental design, full additive model
-design <- model.matrix(~se$FST + se$Sex + se$Genotype + se$Set + se$ELS + se$FST:se$Sex)
+design <- model.matrix(~ se$SV1 + se$SV2 + se$FST + se$Sex + se$Genotype + se$Set + se$ELS + se$FST:se$Sex)
 
 y <- DGEList(counts=assays(se)$counts)
 y <- calcNormFactors(y)
 y <- estimateDisp(y,design)
 
 #filter out genes that are below 10 counts in more than 75% of samples
-keep <- rowSums(y$counts>10) >= 5
+keep <- rowSums(y$counts>10) >= (ncol(y) * 0.25)
 y <- y[keep, , keep.lib.sizes=FALSE]
 
 Results <- list()
@@ -376,22 +441,28 @@ fit <- glmQLFit(y,design)
 for(i in colnames(design)[-1]){
   Results[[i]] <- glmQLFTest(fit, i)
 }
+
+se <- se[,order(se$Sex,se$FST)]
+sehm(se, rownames(topTags(Results$`se$FSTFST:se$Sexfemale`)), assayName = "corrected", do.scale = TRUE, anno_columns=c("FST","Sex"), main="Top10 Sex:FST interaction genes (not significant!)")
 topTags(Results$`se$FSTFST:se$Sexfemale`)
 ```
 
-Interaction between acute stress and genotype
+No genes pass multiple testing correction
+
+### Are responses of FST genes altered by BDNF Val66Met?
 ```{r}
 se <- kallistodata
+se <- dosvacor(se, form = ~FST + Sex + Genotype + Set + ELS + FST:Genotype, form0 = ~Set)
 
 #experimental design, full additive model
-design <- model.matrix(~se$FST + se$Sex + se$Genotype + se$Set + se$ELS + se$FST:se$Genotype)
+design <- model.matrix(~se$SV1 + se$SV2 + se$FST + se$Sex + se$Genotype + se$Set + se$ELS + se$FST:se$Genotype)
 
 y <- DGEList(counts=assays(se)$counts)
 y <- calcNormFactors(y)
 y <- estimateDisp(y,design)
 
 #filter out genes that are below 10 counts in more than 75% of samples
-keep <- rowSums(y$counts>10) >= 5
+keep <- rowSums(y$counts>10) >= (ncol(y) * 0.25)
 y <- y[keep, , keep.lib.sizes=FALSE]
 
 Results <- list()
@@ -399,22 +470,29 @@ fit <- glmQLFit(y,design)
 for(i in colnames(design)[-1]){
   Results[[i]] <- glmQLFTest(fit, i)
 }
-topTags(Results$`se$FSTFST:se$GenotypeBDNFMET`)
+se <- se[,order(se$Genotype,se$FST)]
+sehm(se, rownames(topTags(Results$`se$FSTFST:se$GenotypeBDNFMET`, p.value = 0.05, n = 1000)), assayName = "corrected", do.scale = TRUE, anno_columns=c("FST","Genotype"), main="Significant FST:Genotype interaction genes with corrected data")
+sehm(se, rownames(topTags(Results$`se$FSTFST:se$GenotypeBDNFMET`, p.value = 0.05, n = 1000)), do.scale = TRUE, anno_columns=c("FST","Genotype"), main="Significant FST:Genotype interaction genes with uncorrected data")
+topTags(Results$`se$FSTFST:se$GenotypeBDNFMET`, p.value = 0.05, n = 20)
 ```
 
-Interaction between acute stress and early life stress
+There are multiple genes that pass multiple testing correction. However, the data for these still looks noisy and genes that show up are highly co-expressed. The low replicate number might have impaired the ability to remove technical variability sufficiently for the Genotype:FST assessment, so the results should be interpreted with caution and more replicates would be needed.
+
+### are responses of FST genes altered by early life stress?
 ```{r}
 se <- kallistodata
+se <- dosvacor(se, form = ~FST + Sex + Genotype + Set + ELS + FST:ELS, form0 = ~Set)
+
 
 #experimental design, full additive model
-design <- model.matrix(~se$FST + se$Sex + se$Genotype + se$Set + se$ELS + se$FST:se$ELS)
+design <- model.matrix(~se$SV1 + se$SV2 + se$FST + se$Sex + se$Genotype + se$Set + se$ELS + se$FST:se$ELS)
 
 y <- DGEList(counts=assays(se)$counts)
 y <- calcNormFactors(y)
 y <- estimateDisp(y,design)
 
 #filter out genes that are below 10 counts in more than 75% of samples
-keep <- rowSums(y$counts>10) >= 5
+keep <- rowSums(y$counts>10) >= (ncol(y) * 0.25)
 y <- y[keep, , keep.lib.sizes=FALSE]
 
 Results <- list()
@@ -422,167 +500,10 @@ fit <- glmQLFit(y,design)
 for(i in colnames(design)[-1]){
   Results[[i]] <- glmQLFTest(fit, i)
 }
+
+se <- se[,order(se$ELS,se$FST)]
+sehm(se, rownames(topTags(Results$`se$FSTFST:se$ELSELS`)), assayName = "corrected", do.scale = TRUE, anno_columns=c("ELS","FST"), main="Significant FST:ELS interaction genes")
 topTags(Results$`se$FSTFST:se$ELSELS`)
 ```
 
-# DESeq2 analysis
-
-
-```{r}
-suppressPackageStartupMessages({
-  library(DESeq2)
-  library(sva)
-  library(SEtools)
-  library(RUVSeq)
-})
-```
-
-## GSE100579
-
-```{r}
-dat1 <- readRDS("data/TRAPReanalysis.SE.rds")
-dat1 <- dat1[,dat1$Set=="GSE100579"]
-dat1$Genotype <- factor(gsub(" ","",dat1$Geontype), c("WildType","BDNFMET"))
-dat1$Geontype <- NULL
-dat1$Condition <- relevel(dat1$Condition, "None")
-dds1 <- DESeqDataSetFromMatrix( round(assay(dat1)), colData=colData(dat1),
-        design=~Gender+Genotype+Condition+Gender:Condition )
-dds1 <- DESeq(dds1)
-# so that we plot the DESeq-normalized counts:
-dat1 <- dat1[row.names(dds1),]
-assays(dat1)$lognorm <- log1p(counts(dds1, normalized=TRUE))
-rowData(dat1)$logCount <- rowMeans(assays(dat1)$lognorm)
-resultsNames(dds1)
-```
-
-### Gender
-
-```{r}
-res <- results(dds1, name = "Gender_male_vs_female")
-DESeq2::plotMA(res)
-res <- res[order(res$padj),]
-res[1:10,c(1,2,6)]
-dat1 <- dat1[,order(dat1$Gender, dat1$Condition, dat1$Genotype, dat1$Estrodiol)]
-sehm(dat1, row.names(res)[which(res$padj<0.05)], assayName = "lognorm", do.scale = TRUE, anno_row="logCount", anno_columns=c("Gender","Genotype","Condition"), main="Differentially-expressed across sex")
-```
-
-### FST
-
-```{r}
-res <- results(dds1, name = "Condition_FST_vs_None")
-DESeq2::plotMA(res)
-res <- res[order(res$padj),]
-dat1 <- dat1[,order(dat1$Condition, dat1$Gender, dat1$Genotype, dat1$Estrodiol)]
-sehm(dat1, row.names(res)[which(res$padj<0.05)], assayName = "lognorm", do.scale = TRUE, anno_row="logCount", anno_columns=c("Gender","Genotype","Condition"), main="Differentially-expressed upon FST")
-```
-
-Here you see exactly why I don't use DESeq: it gives significance even when there are large intra-group differences...
-
-### Genotype
-
-```{r}
-res <- results(dds1, name = "Genotype_BDNFMET_vs_WildType")
-DESeq2::plotMA(res)
-res <- res[order(res$padj),]
-dat1 <- dat1[,order(dat1$Genotype, dat1$Gender, dat1$Condition, dat1$Estrodiol)]
-sehm(dat1, row.names(res)[which(res$padj<0.05)], assayName = "lognorm", do.scale = TRUE, anno_row="logCount", anno_columns=c("Gender","Genotype","Condition"), main="Differentially-expressed between genotypes")
-```
-
-### Gender:FST
-
-```{r}
-res <- results(dds1, name = "Gendermale.ConditionFST")
-DESeq2::plotMA(res)
-res <- res[order(res$padj),]
-res[1:10,c(1,2,6)]
-dat1 <- dat1[,order(dat1$Gender, dat1$Condition, dat1$Genotype, dat1$Estrodiol)]
-sehm(dat1, row.names(res)[which(res$padj<0.05)], assayName = "lognorm", do.scale = TRUE,  anno_row="logCount", anno_columns=c("Gender","Genotype","Condition"), main="Sex-dependent effects of FST")
-```
-
-The MA-plot shows a suspicious trend. Adam17 and Prl are clearly artefacts of low counts (filtering improves both edgeR and DESeq2), especially given the trend shown by the MA-plot. RP23 is another of these weird DESeq2 calls. Kif21b and Gm7334 could be something (but see below).
-
-# DESeq2 analysis with randomized variable reassignments
-
-Out of interest, lets see what happens if we randomly shuffle samples and re-run the analysis
-
-
-```{r}
-suppressPackageStartupMessages({
-  library(DESeq2)
-  library(sva)
-  library(SEtools)
-  library(RUVSeq)
-})
-```
-
-## GSE100579
-
-```{r}
-dat1 <- readRDS("data/TRAPReanalysis.SE.rds")
-dat1 <- dat1[,dat1$Set=="GSE100579"]
-dat1$Genotype <- factor(gsub(" ","",dat1$Geontype), c("WildType","BDNFMET"))
-dat1$Geontype <- NULL
-dat1$Condition <- relevel(dat1$Condition, "None")
-
-shuffle <- sample(1:length(dat1$Condition))
-dat1$Condition <- dat1$Condition[shuffle]
-dat1$Genotype <- dat1$Genotype[shuffle]
-dat1$Gender <- dat1$Gender[shuffle]
-
-dds1 <- DESeqDataSetFromMatrix( round(assay(dat1)), colData=colData(dat1),
-        design=~Gender+Genotype+Condition+Gender:Condition )
-dds1 <- DESeq(dds1)
-# so that we plot the DESeq-normalized counts:
-dat1 <- dat1[row.names(dds1),]
-assays(dat1)$lognorm <- log1p(counts(dds1, normalized=TRUE))
-rowData(dat1)$logCount <- rowMeans(assays(dat1)$lognorm)
-resultsNames(dds1)
-```
-
-### Gender
-
-```{r}
-res <- results(dds1, name = "Gender_male_vs_female")
-DESeq2::plotMA(res)
-res <- res[order(res$padj),]
-res[1:10,c(1,2,6)]
-dat1 <- dat1[,order(dat1$Gender, dat1$Condition, dat1$Genotype, dat1$Estrodiol)]
-sehm(dat1, row.names(res)[which(res$padj<0.05)], assayName = "lognorm", do.scale = TRUE, anno_row="logCount", anno_columns=c("Gender","Genotype","Condition"), main="Differentially-expressed across sex")
-```
-
-### FST
-
-```{r}
-res <- results(dds1, name = "Condition_FST_vs_None")
-DESeq2::plotMA(res)
-res <- res[order(res$padj),]
-dat1 <- dat1[,order(dat1$Condition, dat1$Gender, dat1$Genotype, dat1$Estrodiol)]
-sehm(dat1, row.names(res)[which(res$padj<0.05)], assayName = "lognorm", do.scale = TRUE, anno_row="logCount", anno_columns=c("Gender","Genotype","Condition"), main="Differentially-expressed upon FST")
-```
-
-Here you see exactly why I don't use DESeq: it gives significance even when there are large intra-group differences...
-
-### Genotype
-
-```{r}
-res <- results(dds1, name = "Genotype_BDNFMET_vs_WildType")
-DESeq2::plotMA(res)
-res <- res[order(res$padj),]
-dat1 <- dat1[,order(dat1$Genotype, dat1$Gender, dat1$Condition, dat1$Estrodiol)]
-sehm(dat1, row.names(res)[which(res$padj<0.05)], assayName = "lognorm", do.scale = TRUE, anno_row="logCount", anno_columns=c("Gender","Genotype","Condition"), main="Differentially-expressed between genotypes")
-```
-
-### Gender:FST
-
-```{r}
-res <- results(dds1, name = "Gendermale.ConditionFST")
-DESeq2::plotMA(res)
-res <- res[order(res$padj),]
-res[1:10,c(1,2,6)]
-dat1 <- dat1[,order(dat1$Gender, dat1$Condition, dat1$Genotype, dat1$Estrodiol)]
-sehm(dat1, row.names(res)[which(res$padj<0.05)], assayName = "lognorm", do.scale = TRUE,  anno_row="logCount", anno_columns=c("Gender","Genotype","Condition"), main="Sex-dependent effects of FST")
-```
-
-The MA-plot shows a suspicious trend. Adam17 and Prl are clearly artefacts of low counts (filtering improves both edgeR and DESeq2), especially given the trend shown by the MA-plot. RP23 is another of these weird DESeq2 calls. Kif21b and Gm7334 could be something (but see below).
-
-
+No genes pass multiple testing correction
